[package]
name = "wash-cli"
version = "0.3.0"
authors = ["wasmCloud Team"]
edition = "2018"
repository = "https://github.com/wasmcloud/wash"
description = "wasmcloud Shell (wash) CLI tool"
license = "Apache-2.0"
readme = "README.md"
keywords = ["webassembly", "wasmcloud", "wash", "cli"]
categories = ["wasm", "command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
structopt = "0.3.21"
serde_json = { version = "1.0.62", features = ["raw_value"] }
serde = { version = "1.0.123", features = ["derive"] }
serdeconv = "0.4.0"
tui-logger = "0.6.0"
tui = { version = "0.14.0", default-features = true }
log = "0.4.14"
termion = "1.5"
actix-rt = "2.1.0"
spinners = "1.2.0"
nats = "0.8.6"
once_cell = "1.5.2"
term-table = "1.3.1"
# the 0.6.0 crate will work when it's released (very soon?), but Cargo.toml still says 0.5.0 so we have to pull from git
oci-distribution = { git = "https://github.com/deislabs/krustlet" }

nkeys = "0.1.0"
wascap = "0.6.0"
provider-archive = "0.4.0"
wasmcloud-control-interface = { path = "../wasmcloud/crates/wasmcloud-control-interface", version = "0.1.1" }
wasmcloud-host = { path = "../wasmcloud/crates/wasmcloud-host", version = "0.15.4" }

[dev-dependencies]
test_bin = "0.3.0"
reqwest = { version = "0.11", features = ["blocking"] }

[[bin]]
name = "wash"
path = "src/main.rs"
test = true
bench = true
